--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=h, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> A COLLAGE FORM</title>
+    <link rel="icon" href=  "c:\Users\AYON\Downloads\favicon (1).ico">
+
 </head>
 <body>
-    <h1>wasik pathan </h1>
-    <h3>drtgdopfgdiofgjifgjd</h3>
-    <h4>dfgdfjiasdftskdfks</h4>
-</body>
+    <h3>visit our fb page</h3>
+    <a href="https://www.facebook.com/"> facebook page</a><br>000000000000000000
+    <img src="c:\Users\AYON\Downloads\318200600_1639960149756391_1148188157570273943_n_80.jpg" alt=" wasiks image" height="250px" width="250px ">
+        <h1>College Registration Form</h1>
+    <h3>Thank you for applying to our college. Please fill in the form below to complete the registration process for admission.</h3>
+    <div>
+        <h3>Name</h3>
+        <input type="text" placeholder="Fast"> <input type="text" placeholder="last">
+    
+    </div>
+    <div>
+        <h3>Date Of Birth</h3>
+        <input type="date" name="date-of-birtj" >
+    </div>
+    <div>
+        <h3>Email</h3>
+        <input type="email" id="email" placeholder="enter your email">
+        
+    </div>
+    <h3> Mother's Name</h3>
+        <input type="text" placeholder="Fast"> <input type="text" placeholder="last">
+        <h3> Father's Name</h3>
+        <input type="text" placeholder="Fast"> <input type="text" placeholder="last">
+    <h3>Gender</h3>
+    <input type="radio">male
+    <input type="radio">female
+    <h3>Nationality</h3>
+    <input type="text">
+    <h3>Home Address</h3>
+    <input type="text" placeholder=" Street Address"> <br>
+    <input type="text" placeholder=" city"> <select name="country" id="countyr" placeholder="Country">
+        <option value="country" placeholder="country">country</option>
+        <option value="brazil">Brazil</option>
+  <option value="pakistan">Pakistan</option>
+  <option value="india">India</option>
+  <option value="Bangladesh">Bangladesh </option>
+    </select>
+    <h3>phone number</h3>
+    <input type="tel" placeholder="########">
+    <h3>In a few sentences, write down why you want to become a student of our College.</h3>
+    <textarea  cols="30" rows="10"></textarea> <br>
+    <button>REGISTER</button>
+
+
+
+
+
+
+
+
+    </body>
 </html>
